<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playRecord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/task_elementy_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player_header_State"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/playing"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
            android:id="@+id/record_FileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/press_the_mic_button_n_to_start_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_header_State" />

        <ImageButton
            android:id="@+id/btn_Play_Record"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@color/ColorDarkBlack"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_round_play_circle_filled_24"
            android:tint="@color/ColorOrangeNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_FileName"
            android:contentDescription="@string/todo" />

        <SeekBar
            android:id="@+id/player_SeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:progressBackgroundTint="@color/ColorOrangeNote"
            android:background="@drawable/dialog_custom_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Play_Record"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/closePlayer_Layout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/btn_shape_one"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
       />

</androidx.constraintlayout.widget.ConstraintLayout>